# pitime-app

./: .gitignore  birthdays.txt  calendar.kv  globals.py  main.py  mypy.ini  pitime.kv  pyproject.toml  run.sh  todoist.py  viewer.kv  viewer.py  weather.py
todoist/: __init__.py  basictodoist.py  birthdays.py  compose.py  interface.py  kivytodoist.py
weather/: __init__.py  icons.py  interface.py  openweather.py
widgets/: calendar.kv  calendar.py  carousel.kv  carousel.py  clock.kv  clock.py  forecast.py  mainscreen.kv  mainscreen.py  tasks.kv  tasks.py  weather.kv  weather.py
